<resources>

    <string name="tariff_page_title">Cek Subsidi Pasang Listrik</string>
    <string name="info_page_title">Status Subsidi Pasang Listrik</string>
    <string name="attention">Perhatian</string>
    <string name="meter_location"># Lokasi Pemasangan Meter</string>
    <string name="province">Provinsi</string>
    <string name="district">Kabupaten</string>
    <string name="sub_district">Kecamatan</string>
    <string name="village">Kelurahan/Desa</string>
    <string name="customer_info"># Informasi Calon Pelanggan</string>
    <string name="customer_id">Nomor KTP</string>

    <string name="type_hint">Ketik %s</string>
    <string name="select_hint">Pilih %s</string>
    <string name="show_subsidy">Lihat Status Subsidi</string>

    <string name="timer_title">Memuat Informasi</string>
    <string name="timer_narration">Anda dapat mempercepat waktu dengan menonton iklan</string>
    <string name="show_ads">Lihat Iklan</string>

    <string name="subsidy_status">Status Subsidi</string>
    <string name="back_to_home">Kembali Ke Awal</string>

    <string name="retry">Ulangi</string>
    <string name="skip">Lewati</string>
    <string name="next">Selanjutnya</string>

</resources>