<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".tariff.ui.TariffInquiryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="20dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center_horizontal"
            android:background="@drawable/bg_round_white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer_title"
                android:textColor="@color/textNormal"
                android:padding="12dp"/>

            <TextView
                android:id="@+id/txtTimer"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:text="0"
                android:textSize="80sp"
                android:gravity="center"
                android:textColor="@color/textLight"
                android:background="@drawable/bg_timer"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer_narration"
                android:textColor="@color/textNormal"
                android:textAlignment="center"
                android:padding="12dp"/>

            <Button
                android:id="@+id/btnAds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/show_ads"
                style="@style/Widget.MaterialComponents.Button"/>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/prgAds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:indeterminate="true"/>


        </LinearLayout>
    </LinearLayout>

</layout>
