<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".tariff.ui.TariffFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:paddingBottom="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_field"
                android:padding="2dp">

                <WebView
                    android:id="@+id/wbInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    tools:ignore="WebViewLayout" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meter_location"
                android:textStyle="bold"
                android:textColor="@color/textNormal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/prgProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/province"
                app:expandedHintEnabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/spnProvince"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:hint="@{@string/select_hint(@string/province)}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/prgDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/district"
                app:expandedHintEnabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/spnDistrict"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:hint="@{@string/select_hint(@string/district)}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/prgSubDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/sub_district"
                app:expandedHintEnabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/spnSubDistrict"
                    android:layout_width="match_parent"
                    android:inputType="none"
                    android:hint="@{@string/select_hint(@string/sub_district)}"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/prgVillage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/village"
                app:expandedHintEnabled="false"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/spnVillage"
                    android:layout_width="match_parent"
                    android:inputType="none"
                    android:hint="@{@string/select_hint(@string/village)}"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_info"
                android:textStyle="bold"
                android:textColor="@color/textNormal"
                android:layout_marginTop="16dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@{@string/type_hint(@string/customer_id)}"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCustomerId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/show_subsidy"
                style="@style/Widget.MaterialComponents.Button"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
